test/conformance/chainsaw/validate/policy/standard/psa/test-exclusion-procmount/bad-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: bad-pod
  namespace: default
spec:
  containers:
  - name: nginx1
    image: nginx
    args:
    - sleep
    - 1d
    securityContext:
      procMount: unknown
  initContainers:
  - name: nginx1
    image: nginx
    args:
    - sleep
    - 1d
    securityContext:
      procMount: other
