test/conformance/chainsaw/validate/policy/standard/psa/test-exclusion-procmount/excluded-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: excluded-pod
  namespace: default
spec:
  containers:
  - name: nginx1
    image: nginx
    args:
    - sleep
    - 1d
    securityContext:
      procMount: foo
  initContainers:
  - name: nginx2
    image: nginx
    args:
    - sleep
    - 1d
    securityContext:
      procMount: bar
