test/conformance/chainsaw/validate/policy/standard/psa/test-exclusion-procmount/chainsaw-test.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  creationTimestamp: null
  name: test-exclusion-procmount
spec:
  steps:
  - name: step-01
    try:
    - apply:
        file: policy.yaml
    - assert:
        file: policy-assert.yaml
  - name: step-02
    try:
    - apply:
        expect:
        - check:
            ($error != null): true
        file: bad-pod.yaml
    - apply:
        file: excluded-pod.yaml
    - apply:
        file: good-pod.yaml
